# tensorlogic

./: .gitignore  CANDLE_FUNCTIONS_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_4_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  README.md  README_ja.md  TESTING.md  TEST_COVERAGE_REPORT_JA.md  TL_COVERAGE_ANALYSIS.md  add_f32_kernels.sh  pyproject.toml  test_f32_basic_ops.tl  test_for_i_step3.tl  test_for_variable_i.tl  test_range.tl  test_return_value.tl  test_simple_logic.tl  test_struct.tl
.cargo/: config.toml
.claude/: settings.local.json
benches/: advanced_fusion_benchmark.rs  advanced_fusion_benchmark.rs.disabled  coreml_benchmark.rs  coreml_neural_engine_benchmark.rs  metal_performance.rs
benchmarks/: advanced_fusion_analysis.md  advanced_fusion_performance.txt  baseline_analysis.md  baseline_metal_performance.txt  coreml_neural_engine_analysis.md  coreml_neural_engine_results.txt  final_optimization_results.md  final_optimized_metal_performance.txt  optimization_comparison.md  optimized_metal_performance.txt  pooled_metal_performance.txt  tiled_matmul_fixed_performance.txt  tiled_matmul_improvement_report.md  tiled_matmul_performance.txt
claudedocs/: 1layer_test_results.md  GGUF_format_specification.md  GPU_RACE_CONDITION_FIX.md  Output_Comparison_TensorLogic_vs_llama.cpp.md  TensorBuffer_implementation_analysis.md  TensorBurrer設計.md  TensorLogic_vs_Candle_comparison.md  all_tests_summary.md  arc_reference_counting_issue.md  arc_tensor_refactoring_plan.md  ast_implementation_summary.md  buffer_pool_fix_summary.md  candle_1layer_reference.json  candle_22layers_reference.json  candle_alignment_plan.md  candle_command_buffer_architecture.md  candle_gpu_synchronization_strategy.md  candle_integration_findings.md  candle_llama_algorithm.md  candle_llama_algorithm_ja.md  candle_migration_phase2_shape_elimination.md  candle_transformer_implementation_deep_dive.md  complete_test_results.md  constraint_parsing_summary.md  core_types_and_functions.md  coreml_integration_tests.md  coreml_usage_guide.md  expression_precedence_summary.md  f16_neural_engine_metal_spec.md  f16_overflow_guide.md  f16_performance_investigation.md  findings_layer_degradation.md  getting_started.md  gnn_implementation.md  implementation_verification_results.md  interpreter_implementation_summary.md  jupyter_integration_plan.md  keyword_fix_summary.md  layer0_shape_verification.md  layer_checkpoint_analysis.md  (+79 more)
debug/: CRITICAL_BUG_REPORT.md  candle_quick_test.tl  chat_demo_22layers.tl  chat_demo_22layers_loop.tl  chat_demo_with_kvcache.tl  chat_optimized_transformer.tl  compute_reference_values.py  llvm_test.tl  test_22layer_prefill.tl  test_22layers_rms_norm.tl  test_2layer_debug.tl  test_35tokens_forloop.tl  test_38tokens_22layers.tl  test_38vs46_simple.tl  test_3layer_debug.tl  test_46_tokens_full.tl  test_46tokens_10layers.tl  test_46tokens_22layers.tl  test_46tokens_3layers.tl  test_46tokens_layer1.tl  test_46tokens_layer2_detail.tl  test_46tokens_progressive.tl  test_all_layers_nan.tl  test_apply_rope_q.tl  test_attention_scores_38.tl  test_attention_scores_46.tl  test_call_order.tl  test_chat_minimal.tl  test_combination.tl  test_cos_sin_values.tl  test_detailed_trace.tl  test_display.tl  test_double_buggy.tl  test_eos_token.tl  test_exact_reproduce.tl  test_f32.tl  test_fine_scaling.tl  test_five_layers.tl  test_float_array_reshape.tl  test_forloop_corruption.tl  (+43 more)
docs/: CANDLE_INTEGRATION.md  TODO.md  added_operations_2025.md  candle_functions_reference.md  candle_vs_tensorlogic_command_buffer.md  chat_demo_debugging_summary.md  gguf_fix_summary.md  language_server.md  llm_chat_implementation.md  llvm_compiler.md  tinyllama_architecture.md
examples/: LLM_GUIDE.md  README.md  README_LLM.md  README_LLM_EXAMPLES.md  attention.tl  attention_final.tl  attention_functions.tl  attention_mask_demo.tl  benchmark_chat.tl  benchmark_simple.tl  candle_functions_demo.tl  candle_model_save_demo.tl  chat_10layers_kv_rope.tl  chat_22layers_clean.tl  chat_22layers_full_with_scaling.tl  chat_22layers_loop.tl  chat_22layers_residual_fix.tl  chat_22layers_simple.tl  chat_22layers_with_residual_scaling.tl  chat_22layers_working.tl  chat_2layers_f16.tl  chat_2layers_f32.tl  chat_2layers_simple.tl  chat_2tokens_profile.tl  chat_autoregressive_f32.tl  chat_autoregressive_kv_f32.tl  chat_buffered.tl  chat_debug.tl  chat_demo.tl  chat_demo_22_layers_fixed.tl  chat_demo_22layers.tl  chat_demo_22layers_loop.tl  chat_demo_2layers_rope.tl  chat_demo_debug.tl  chat_demo_debug_logits.tl  chat_demo_full_22_layers.tl  chat_demo_greedy.tl  chat_demo_nan_diagnostic.tl  chat_demo_optimized.tl  chat_demo_short.tl  (+221 more)
examples/debug/: Cargo.toml  candle_10token_reference.rs  check_norm_q4.tl  check_norm_values.tl  check_specific_token_logit.tl  check_token_1187.tl  check_token_6898.tl  check_weights.tl  debug_first_token_logits.tl  debug_layer0_nan.tl  debug_layer_divergence.tl  debug_token2_zero_logits.tl  debug_zero_logits_issue.tl  extract_all_models.sh  extract_candle_values.rs  inspect_token11_logits.tl  pinpoint_hang.tl  test_chat_f16.tl  test_determinism_no_transpose.tl  test_forward_determinism.tl  test_greedy_sampling.tl  test_layer_outputs.tl  test_long_generation.tl  test_odd_even_seqlen.tl  test_qk_einsum.tl  test_rms_norm_seq46.tl  test_rope_values.tl  test_slice_last_simple.tl  test_sum_f32.tl  test_token11_detailed.tl  test_token_decode.tl  verify_all_q4_0.tl  verify_all_q5_0.tl  verify_all_q6_k.tl  verify_all_q8_0.tl  verify_f16.tl  verify_q4_0.tl  verify_q5_0.tl  verify_q6_k.tl  verify_q8_0.tl
examples/debug/candle_reference_data/: MODEL_COMPARISON.md  tinyllama-1.1b-chat-f16_reference.md  tinyllama-1.1b-chat-q4_0_reference.md  tinyllama-1.1b-chat-q5_0_reference.md  tinyllama-1.1b-chat-q6_k_reference.md  tinyllama-1.1b-chat-q8_0_reference.md
jupyter/: kernel.json
scripts/: benchmark_kv_cache.sh  check_gpu_usage.sh  compare_gguf_pytorch.py  diagnose_memory_leak.sh  extract_pytorch_embeddings.py  install_kernel.py  (+3 more)
(+640 files in other folders)
