[package]
name = "tensorlogic"
version = "0.1.1"
edition = "2021"

[dependencies]
# パーサー
pest = "2.7"
pest_derive = "2.7"

# f16サポート
half = "2.4"

# Metal統合
metal = "0.29"
objc = "0.2"

# Python統合
# extension-module: Pythonモジュール(.so)ビルド用 (maturinで使用)
# auto-initialize: スタンドアロンバイナリ用 (CLIで使用)
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }
numpy = { version = "0.21", optional = true }

# CoreML統合 (Neural Engine)
objc2 = "0.5"
objc2-core-ml = { version = "0.2", features = [
    "MLMultiArray",
    "MLModel",
    "MLFeatureValue",
    "MLFeatureProvider",
    "MLDictionaryFeatureProvider",
    "MLModelDescription",
    "MLFeatureDescription",
    "MLFeatureType"
] }
objc2-foundation = { version = "0.2", features = ["NSArray", "NSValue", "NSError", "NSString", "NSDictionary"] }

# エラーハンドリング
thiserror = "1.0"
anyhow = "1.0"

# ユーティリティ
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.9.2"
rand_distr = "0.5.1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# python: CLIバイナリ用 (auto-initialize)
python = ["pyo3", "numpy"]
# python-extension: Pythonモジュール(.so)用 (extension-module)
python-extension = ["pyo3/extension-module", "pyo3/abi3-py38", "numpy"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
# Metal GPU tests require single-threaded execution to avoid device resource conflicts
# See: claudedocs/metal_backward_pass_investigation.md
opt-level = 0

[lib]
name = "tensorlogic"
path = "src/lib.rs"

[[bin]]
name = "tl"
path = "src/main.rs"

[[example]]
name = "simple_training"
path = "examples/simple_training.rs"

[[bench]]
name = "coreml_benchmark"
path = "benches/coreml_benchmark.rs"
harness = false

[[bench]]
name = "metal_performance"
path = "benches/metal_performance.rs"
harness = false

[[bench]]
name = "advanced_fusion_benchmark"
path = "benches/advanced_fusion_benchmark.rs"
harness = false

[[bench]]
name = "coreml_neural_engine_benchmark"
path = "benches/coreml_neural_engine_benchmark.rs"
harness = false
